--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:5000",
   "dependencies": {
     "@material-ui/core": "^4.10.1",
+    "@sendgrid/mail": "^7.1.1",
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.5.0",
